<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/package_name"
        android:importantForAutofill="no"
        android:inputType="none"
        android:maxLines="1" />

    <Button
        android:id="@+id/block_uninstall_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/block_uninstall_app" />

    <Button
        android:id="@+id/unblock_uninstall_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unblock_uninstall_app" />

    <Button
        android:id="@+id/disable_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disable_app" />

    <Button
        android:id="@+id/enable_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_app" />

</androidx.appcompat.widget.LinearLayoutCompat>